# LLM-Lander

./: .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  README_EN.md  pyproject.toml
docs/: architecture.md  benchmark_results.md  development.md  requirements.md
src/llm_lander/: __init__.py  __main__.py  calculator.py  cli.py  gpu_scanner.py  hf_connector.py  kv_cache.py  model_profiler.py  ollama_connector.py
tests/: __init__.py  test_calculator.py  test_e2e_cli.py  test_gpu_scanner.py  test_hf_connector.py  test_kv_cache.py  test_model_profiler.py  test_ollama_connector.py
